--- a/Testing/testing.tex
+++ b/Testing/testing.tex
@@ -617,7 +617,7 @@ The table below contains my finalised test plan, including the retained and chan
 
 5 & Verify the program fulfills the specification & Run through the program, testing the different aspects to make sure they fit the objectives in the specification & Add some information to the database, start & Normal & Program fulfills the specification & \textbf{Program partially fulfills the specification, some areas do not work.} & Please see all annotated samples. \\ \hline
 
-
+\label{tab:Testing}
 
 	\end{longtable}
 
