--- a/Testing/testing.tex
+++ b/Testing/testing.tex
@@ -754,7 +754,15 @@ The screen shot above shows that the values of the database for the skatepark co
 
 \textbf{Test 5.00 Evidence}
 
-All of the previous annotated samples contribute to Test 5.00. There are elements of my program which work as intended e.g The name line edit did not contain the correct validation which lead to the failure of that test series  (Figure \ref{fig:Test 2.00} on page \pageref{fig:Test 2.00}). On the other hand most of my tests passed e.g saving tricks  (Figure \ref{fig:Test 3.03} on page \pageref{fig:Test 3.03}).
+All of the previous annotated samples contribute to Test 5.00. There are elements of my program which work as intended e.g The name line edit did not contain the correct validation which lead to the failure of that test series  (Figure \ref{fig:Test 2.00} on page \pageref{fig:Test 2.00}). On the other hand most of my tests passed e.g saving tricks  (Figure \ref{fig:Test 3.03} on page \pageref{fig:Test 3.03}). This was also brought to my attention by my client as shown by an email conversation below.
+
+
+\begin{figure}[H]
+    \includegraphics[width=\textwidth]{./Testing/AnnotatedSamples/StuartEmail.jpg}
+    \caption{Evidence for Test 5.00} \label{fig:Test 5.00}
+\end{figure}
+
+
 
 \section{Evaluation}
 
