First feedback section

--- a/Testing/testing.tex
+++ b/Testing/testing.tex
@@ -576,7 +576,7 @@ The table below contains my finalised test plan, including the retained and chan
 
 3.00 & Verify the first and last name are inputted into the database & The first and last name should be added to the database & 1.FirstName 2.LastName & 1.Normal 2.Normal & 1.Accept 2.Accept & 1.Passed 2.Passed & Figure \ref{fig:Test 3.00} on page \pageref{fig:Test 3.00}  \\ \hline
 
-3.01 & Verify the profile picture is inputted into the database & A jpeg image should be added to the database & JPEG image & Normal & Accept & File path was added to the database & \\ \hline
+3.01 & Verify the profile picture is inputted into the database & A jpeg image should be added to the database & ProfilePicture.JPG & Normal & Accept & File path was added to the database & \\ \hline
 
 3.02 & Verify an email is inputted into the database & An email should be added to the database & BenKeppie@hotmail.co.uk & Normal & Accept  & Email was added to the database & \\ \hline
 
@@ -586,7 +586,7 @@ The table below contains my finalised test plan, including the retained and chan
 
 3.05  & Verify a trick obstacle is inputted into the database & A trick obstacle should be added to the database & Flat ground & Normal & Accept & Trick obstacle was added to the database & \\ \hline
 
-3.06 & Verify a trick image is inputted into the database & A trick image should be added to the database & JPEG Image & Normal & Accept & Trick image file path was added to the database& \\ \hline
+3.06 & Verify a trick image is inputted into the database & A trick image should be added to the database & TrickImage.JPG & Normal & Accept & Trick image file path was added to the database& \\ \hline
 
 3.07 & Verify a trick tutorial link is inputted into the database & A trick tutorial link should be added to the database & \url{www.youtube.com/watch?v=?} & Normal & Accept & YouTube link was added to the database & \\ \hline
 
@@ -615,7 +615,7 @@ The table below contains my finalised test plan, including the retained and chan
 
 
 
-5 & Verify the program fulfills the specification & Run through the program, testing the different aspects to make sure they fit the objectives in the specification & Add some information to the database, start & Normal & Program fulfills the specification & \textbf{Program partially fulfills the specification, some areas do not work.} & Please see all annotated samples. \\ \hline
+5 & Verify the program fulfills the specification & Run through the program, testing the different aspects to make sure they fit the objectives in the specification & Ask the client if the program fulfills the specification, and pass all the test series in the detailed plan. & Normal & Program fulfills the specification & \textbf{Program partially fulfills the specification, some areas do not work.} & Please see all annotated samples and Stuarts' email. \\ \hline
 
 \label{tab:Testing}
 
